# TaiYi-Agent

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  README_cn.md  README_zh.md  ZIP_README.md  pyproject.toml  taiyi.example.yaml  安装使用指南.md
.github/workflows/: ci.yml
cn/: Agent架构思考.md
demo/: run_demo.sh
demo/scenarios/: customer_service.refund.md  dev.git.md
demo/src/: governance.py  llm.py  value_stream.py
deploy/: Dockerfile  docker-compose.yml
deploy/macos/: README.md  Taiyi.spec  build.sh  taiyi_launcher.py
docs/: 00_Design_Document.md  01_Feasibility_Report.md
en/: Agent_Architecture_Thoughts.md
examples/: agent_demo.py  approval_demo.py  gateway_demo.py  governance_demo.py  iteration_demo.py  llm_offline_demo.py  mcp_demo.py  memory_demo.py  multi_agent_demo.py  observability_demo.py  runtime_demo.py  sandbox_demo.py  scheduler_demo.py  skills_demo.py  validation_demo.py  value_stream_demo.py
learning/: DEVELOPMENT_PLAN.md
learning/docs/: 02_Operating_Modes.md  03_Executable_Skill_Quality_Gates.md  04_Provider_Routing.md  05_Immutable_Acceptance_Contracts.md  06_External_Authority_Checks.md
learning/research/: 01_borrowed_patterns.md
learning/tech/: 00_Technical_Architecture.md
practices/: README.md
prd/: 00_PRD.md
research/examples/: agent_demo.py  approval_demo.py  gateway_demo.py  governance_demo.py  iteration_demo.py  llm_offline_demo.py  mcp_demo.py  memory_demo.py  multi_agent_demo.py  observability_demo.py  runtime_demo.py  sandbox_demo.py  (+4 more)
tests/: test_agent.py  test_agent_resume.py  test_agent_runtime_gateway.py  test_approvals.py  test_audit.py  test_channels_market.py  test_committee_permit.py  test_config.py  test_external_git_validation.py  test_gateway.py  test_governance.py  test_iteration.py  test_llm.py  test_llm_factory.py  test_llm_live.py  test_mcp.py  test_memory.py  test_multi_agent.py  test_multiturn_context.py  test_observability.py  test_operating_modes.py  test_resume_repermits.py  test_rules_loader.py  test_runtime.py  test_scenarios.py  test_scheduler.py  test_skills.py  test_static_server.py  test_tools.py  test_validation.py  test_value_stream.py  test_web_endpoints.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+136 files in other folders)
