[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taiyi"
version = "0.1.0"
description = "太一 / The One — a production-grade Agent OS where governance authority is physically separated from scheduling authority."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "zachshi" }]
keywords = ["agent", "llm", "governance", "agent-os"]
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
taiyi = "taiyi.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
taiyi = ["rules/**/*.yaml", "scenarios/catalog/*.md", "skills/catalog/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
